ref(versions): Refactor sorting versions and get latest
