# server.go
@@ -13,20 +13,6 @@ import (
 	"time"
 )
 
-// @title gmkernel plugins sync
-// @version 0.1
-// @description Service to upload and syncronize plugins to gmkernel flow
-// @termsOfService http://swagger.io/terms/
-
-// @license.name Apache 2.0
-// @license.url http://www.apache.org/licenses/LICENSE-2.0.html
-
-// @contact.name Pulse | Software Engineer
-// @contact.url https://engenharia.pulse.io
-// @contact.email engenharia@grupomateus.com.br
-
-// UpServer @host localhost:8000
-// @BasePath /
 func UpServer()  {
 	var dir string
 	flag.StringVar(&dir, "dir", "./download", "the directory to serve plugins files")
